# flowstate

./: .gitignore  CLAUDE.md  README.md  justfile
docs/: PLAN.md  STANDARDS.md  TASKS.md
runtime/: .env.example  pyproject.toml
runtime/.claude/: CLAUDE.md
runtime/scripts/: smoke.py
runtime/src/flowstate/: __init__.py  config.py  logging.py
runtime/src/flowstate/app/: chat.py  health.py  main.py
runtime/src/flowstate/core/: agent.py  events.py  persona.py  sessions.py  translator.py  workspace.py
runtime/tests/: test_chat.py  test_config.py  test_health.py  test_sanity.py  test_sessions.py  test_translator.py
