[project]
name = "flowstate-runtime"
version = "0.1.0"
description = "FlowState agent runtime — FastAPI + Claude Agent SDK"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowstate"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
